profile edit action追加

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -20,4 +20,6 @@
           %p Following
     .profilePage_user_basicInfo
       .profilePage_user_nickname 
+        -# = current_user.profile.nickname
       .profilePage_user_introduction
+        -# = current_user.profile.introduction
