アバター画像の登録機能追加

--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -3,6 +3,10 @@
 -#     %li message
 = form_with(model: @profile, url: profile_path, method: 'PUT', local: true) do |f|
   %div
+    = f.label :avatar, 'アバター'
+  %div
+    = f.file_field :avatar
+  %div
     = f.label :nickname, 'ニックネーム'
   %div
     = f.text_field :nickname
