--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -3,7 +3,7 @@
     .prfilePage_user_name
       = current_user.username
     .profilePage_user_image
-      = image_tag 'Ellipse.png'
+      = image_tag current_user.avatar_image
     .profile_user_actioinBtn
     .profile_user_actionInfo
       .user_posts
