--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,1 +1,20 @@
-%h1 aaaaa
+.container 
+  = link_to new_article_path do
+    .float_btn
+      = image_tag 'camera.png'
+  - @articles.each do |article|
+    = link_to profile_path do
+      .card
+        .card_datail
+          = image_tag current_user.profile.avatar
+          %div
+            %p= current_user.profile.nickname
+            %p= '2022/01/25'
+        .card_image
+          - if article.images.attached?
+            = image_tag article.images
+          - else
+            = image_tag 'default.png'
+        .card_content
+          %p= article.content
+        .card_heart
