--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -5,14 +5,18 @@
   - @articles.each do |article|
     = link_to profile_path do
       .card
-        .card_datail
-          = image_tag current_user.profile.avatar
+        .card_detail
+          - if article.user.profile&.avatar
+            = image_tag article.user.profile.avatar
+          - else
+            = image_tag 'default.png'
           %div
             %p= current_user.profile.nickname
             %p= '2022/01/25'
         .card_image
           - if article.images.attached?
-            = image_tag article.images
+            - article.images.each do |image|
+              = image_tag image
           - else
             = image_tag 'default.png'
         .card_content
