--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -25,4 +25,14 @@
         = current_user.display_introduction
     .profilePage_user_actionBtn
       = link_to '編集', edit_profile_path
+
+
+  
+  - current_user.articles.each do |article|
+    = link_to article_path(article) do
+      .card_image
+        - if article.images.attached?
+          = image_tag article.images.first
+        - else
+          = image_tag 'eyecatch1.png'    
     
