--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,6 +1,6 @@
 %ul
--#   - article.errors.full_messages.each do |message|
--#     %li message
+  - @article.errors.full_messages.each do |message|
+    %li= message
 = form_with(model: @article, local: true) do |f|
   %div
     = f.label :images, '画像'
