コメント一覧ページを追加

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -18,6 +18,11 @@
         .followings_counts
           %span 321
           %p Following
+      .user_likes
+        .likes_counts
+          = link_to favorites_path do
+            %span= current_user.likes_count
+            %p Likes
     .profilePage_user_basicInfo
       .profilePage_user_nickname 
         = current_user.display_name
