投稿数のカウント

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -8,7 +8,7 @@
     .profile_user_actionInfo
       .user_posts
         .posts_counts
-          %span 44
+          %span= current_user.articles_count
           %p Posts
       .user_followers
         .followers_counts
