投稿数からの投稿一覧ページへの遷移

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -8,8 +8,9 @@
     .profile_user_actionInfo
       .user_posts
         .posts_counts
-          %span= current_user.articles_count
-          %p Posts
+          = link_to article_path(@article) do
+            %span= current_user.articles_count
+            %p Posts
       .user_followers
         .followers_counts
           %span 124
