aritcle_show いいねの表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,8 @@ color: $text-base-color;
       position: fixed;
       bottom: 900px;
       right: 50px;
-
-
   }
+
+.hidden {
+    display: none;
+}
