--- a/app/views/favorites/index.html.haml
+++ b/app/views/favorites/index.html.haml
@@ -1,6 +1,6 @@
 .container 
   - @articles.each do |article|
-    .card
+    .card#article{ data: {article_id: article.id}}
       .card_detail
         - if article.user.profile&.avatar
           = image_tag article.user.profile.avatar
@@ -19,12 +19,10 @@
         %p= article.content
         .card_heart
           - if user_signed_in?
-            - if current_user.has_liked?(article)
-              = link_to article_like_path(article), data: { method: 'delete'} do
-                = image_tag 'like.png'
-            - else
-              = link_to article_like_path(article), data: { method: 'post' } do
-                = image_tag 'unlike.png'
+            .article_heart.hidden.active_heart
+              = image_tag 'like.png'
+            .article_heart.hidden.inactive_heart
+              = image_tag 'unlike.png'
         .card_comment
           = link_to new_article_comment_path(article) do
             = image_tag 'comment.png'    
