article show , favorite index Viewの共通化

--- a/app/views/favorites/index.html.haml
+++ b/app/views/favorites/index.html.haml
@@ -1,39 +1,1 @@
-.container 
-  - @articles.each do |article|
-    .card#article{ data: {article_id: article.id}}
-      .card_detail
-        - if article.user.profile&.avatar
-          = image_tag article.user.profile.avatar
-        - else
-          = image_tag 'default.png'
-        %div
-          %p= article.user.display_name
-          %p= article.display_created_at
-      .card_image
-        - if article.images.attached?
-          - article.images.each do |image|
-            = image_tag image
-        - else
-          = image_tag 'eyecatch1.png'
-      .card_content
-        %p= article.content
-        .card_heart
-          - if user_signed_in?
-            .article_heart.hidden.active_heart
-              = image_tag 'like.png'
-            .article_heart.hidden.inactive_heart
-              = image_tag 'unlike.png'
-        .card_comment
-          = link_to new_article_comment_path(article) do
-            = image_tag 'comment.png'    
-        - if user_signed_in? && current_user.has_written(article)
-          .article.detail_actions.dropdown
-            = image_tag 'actions.svg', class: 'dropbtn'
-            .dropdown-content-mini
-              = link_to '編集する', edit_article_path(id: article.id)
-              = link_to '削除する', article_path(id: article.id), data: { method: 'delete', confirm: '本当に削除しますか'}
-      
-      %h2 コメント一覧
-      - article.comments.each do |comment|
-        .article_comment
-          %p= comment.content
+= render 'commons/articles', articles: @articles
