--- a/app/views/favorites/index.html.haml
+++ b/app/views/favorites/index.html.haml
@@ -1,1 +1,3 @@
-= render 'commons/articles', articles: @articles
+.container
+  - @articles.each do |article|
+    = render 'commons/articles', article: article
