--- a/app/views/commons/_articles.html.haml
+++ b/app/views/commons/_articles.html.haml
@@ -1,4 +1,4 @@
-.card#article{ data: {article_id: article.id}}
+.card
   .card_detail
     - if article.user.profile&.avatar
       = image_tag article.user.profile.avatar
@@ -15,23 +15,23 @@
       = image_tag 'eyecatch1.png'
   .card_content
     %p= article.content
-    .card_heart
-      - if user_signed_in?
-        .article_heart.hidden.active_heart
-          = image_tag 'like.png'
-        .article_heart.hidden.inactive_heart
-          = image_tag 'unlike.png'
-    .card_comment
-      = link_to new_article_comment_path(article) do
-        = image_tag 'comment.png'    
-    - if user_signed_in? && current_user.has_written(article)
-      .article.detail_actions.dropdown
-        = image_tag 'actions.svg', class: 'dropbtn'
-        .dropdown-content-mini
-          = link_to '編集する', edit_article_path(id: article.id)
-          = link_to '削除する', article_path(id: article.id), data: { method: 'delete', confirm: '本当に削除しますか'}
-  
-  %h2 コメント一覧
-  - article.comments.each do |comment|
-    .article_comment
-      %p= comment.content
+  .card_heart
+    - if user_signed_in?
+      - if current_user.has_liked(article)
+        .article_heart
+          = link_to article_like_path(article), data: { method: 'delete'} do
+            = image_tag 'like.png'
+      - else
+        .article_heart
+          = link_to article_like_path(article), data: { method: 'post' } do
+            = image_tag 'unlike.png'
+  .card_comment
+    = link_to new_article_comment_path(article) do
+      = image_tag 'comment.png'          
+  .card_actions
+  - if user_signed_in? && current_user.has_written(article)
+    .article.detail_actions.dropdown
+      = image_tag 'actions.svg', class: 'dropbtn'
+      .dropdown-content-mini
+        = link_to '編集する', edit_article_path(id: article.id)
+        = link_to '削除する', article_path(id: article.id), data: { method: 'delete', confirm: '本当に削除しますか'}
