--- a/app/views/favorites/index.html.haml
+++ b/app/views/favorites/index.html.haml
@@ -1,3 +1,4 @@
 .container
   - @articles.each do |article|
-    = render 'commons/articles', article: article
+    = link_to article_path(article) do
+      = render 'commons/articles', article: article
