--- a/app/views/commons/_articles.html.haml
+++ b/app/views/commons/_articles.html.haml
@@ -1,37 +1,39 @@
-.card
-  .card_detail
-    - if article.user.profile&.avatar
-      = image_tag article.user.profile.avatar
-    - else
-      = image_tag 'default.png'
-    %div
-      %p= article.user.display_name
-      %p= article.display_created_at
-  .card_image
-    - if article.images.attached?
-      - article.images.each do |image|
-        = image_tag image
-    - else
-      = image_tag 'eyecatch1.png'
-  .card_content
-    %p= article.content
-  .card_heart
-    - if user_signed_in?
-      - if current_user.has_liked(article)
-        .article_heart
-          = link_to article_like_path(article), data: { method: 'delete'} do
-            = image_tag 'like.png'
-      - else
-        .article_heart
-          = link_to article_like_path(article), data: { method: 'post' } do
-            = image_tag 'unlike.png'
-  .card_comment
-    = link_to new_article_comment_path(article) do
-      = image_tag 'comment.png'          
-  .card_actions
-  - if user_signed_in? && current_user.has_written(article)
-    .article.detail_actions.dropdown
-      = image_tag 'actions.svg', class: 'dropbtn'
-      .dropdown-content-mini
-        = link_to '編集する', edit_article_path(id: article.id)
-        = link_to '削除する', article_path(id: article.id), data: { method: 'delete', confirm: '本当に削除しますか'}
+.container
+  - articles.each do |article|
+    .card
+      .card_detail
+        = link_to profile_path do
+          - if article.user.profile&.avatar
+            = image_tag article.user.profile.avatar
+          - else
+            = image_tag 'default.png'
+        %div
+          %p= article.user.display_name
+          %p= article.display_created_at
+      .card_image
+        = link_to article_path(article) do
+          - if article.images.attached?
+            - article.images.each do |image|
+              = image_tag image
+          - else
+            = image_tag 'eyecatch1.png'
+      .card_content
+        %p= article.content
+      .card_heart
+        - if user_signed_in?
+          - if current_user.has_liked(article)
+            .article_heart
+              = image_tag 'like.png'
+          - else
+            .article_heart
+              = image_tag 'unlike.png'
+      .card_comment
+        = link_to new_article_comment_path(article) do
+          = image_tag 'comment.png'          
+      .card_actions
+      - if user_signed_in? && current_user.has_written(article)
+        .article.detail_actions.dropdown
+          = image_tag 'actions.svg', class: 'dropbtn'
+          .dropdown-content-mini
+            = link_to '編集する', edit_article_path(id: article.id)
+            = link_to '削除する', article_path(id: article.id), data: { method: 'delete', confirm: '本当に削除しますか'}
