--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,44 +1,1 @@
-.container.profilePage 
-  .profilePage_user 
-    .prfilePage_user_name
-      = current_user.username
-    .profilePage_user_image
-      = image_tag current_user.avatar_image
-    .profile_user_actioinBtn
-    .profile_user_actionInfo
-      .user_posts
-        .posts_counts
-          = link_to article_path(@article) do
-            %span= current_user.articles_count
-            %p Posts
-      .user_followers
-        .followers_counts
-          %span 124
-          %p Followers
-      .user_Following
-        .followings_counts
-          %span 321
-          %p Following
-      .user_likes
-        .likes_counts
-          = link_to favorites_path do
-            %span= current_user.likes_count
-            %p Likes
-    .profilePage_user_basicInfo
-      .profilePage_user_nickname 
-        = current_user.display_name
-      .profilePage_user_introduction
-        = current_user.display_introduction
-    .profilePage_user_actionBtn
-      = link_to '編集', edit_profile_path
-
-
-  
-  - current_user.articles.each do |article|
-    = link_to article_path(article) do
-      .card_image
-        - if article.images.attached?
-          = image_tag article.images.first
-        - else
-          = image_tag 'eyecatch1.png'    
-    
+= render '/commons/profile', user: current_user
