--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,13 +1,14 @@
 .container#article{ data: {article_id: @article.id}}
   .card
     .card_detail
-      - if @article.user.profile&.avatar
-        = image_tag @article.user.profile.avatar
-      - else
-        = image_tag 'default.png'
-      %div
-        %p= @article.user.display_name
-        %p= @article.display_created_at
+      = link_to account_path(@article.user) do
+        - if @article.user.profile&.avatar
+          = image_tag @article.user.profile.avatar
+        - else
+          = image_tag 'default.png'
+        %div
+          %p= @article.user.display_name
+          %p= @article.display_created_at
     .card_image
       - if @article.images.attached?
         - @article.images.each do |image|
