--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -4,7 +4,7 @@
       = user.username
     .profilePage_follow_button
       - if current_user.has_followed?(user)
-        %p フォロー済み
+        = link_to 'UnFollow', account_unfollows_path(user), data: { method: 'post' }
       - else
         = link_to 'Follow', account_follows_path(user), data: { method: 'post' }
     .profilePage_user_image
