一覧にユーザー情報記載

--- a/app/views/followings/index.html.haml
+++ b/app/views/followings/index.html.haml
@@ -1,1 +1,3 @@
-= render '/commons/relationships', users: @followings
+.container
+  %h2 Followings
+  = render '/commons/relationships', users: @followings
