--- a/app/views/commons/_relationships.html.haml
+++ b/app/views/commons/_relationships.html.haml
@@ -1,3 +1,6 @@
-.container
-  - users.each do |user|
-    = user.email
+- users.each do |user|
+  .relation_user_info
+    .relation_user_name
+      = user.display_name
+    .relataion_user.image
+      = image_tag user.avatar_image
