--- a/app/views/followers/index.html.haml
+++ b/app/views/followers/index.html.haml
@@ -1,1 +1,3 @@
-= render '/commons/relationships', users: @followers
+.container
+  %h2 Followers
+  = render '/commons/relationships', users: @followers
