Mailerのルーティング作成 letter_openerインストール

--- a/app/views/commons/_articles.html.haml
+++ b/app/views/commons/_articles.html.haml
@@ -9,7 +9,7 @@
             = image_tag 'default.png'
         %div
           %p= article.user.display_name
-          %p= article.display_created_at
+          %p= time_ago_in_words(article.created_at) + '前'
       .card_image
         = link_to article_path(article) do
           - if article.images.attached?
