--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,26 +1,24 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "devise/shared/error_messages", resource: resource
   .login-image
-    = image_tag 'Rectangle.png', class: 'aaa'
+    = image_tag 'Rectangle.png', class: 'topimage'
   .field
-    = f.label :username
+    = f.label :username, class: 'text' 
     %br/
-    = f.text_field :username, autocomplete: "username"
+    = f.text_field :username, autocomplete: "username", class: 'loginform'
   .field
-    = f.label :email
+    = f.label :email, class: 'text'
     %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
+    = f.email_field :email, autofocus: true, autocomplete: "email", class: 'loginform'
   .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
+    = f.label :password, class: 'text'
+
     %br/
-    = f.password_field :password, autocomplete: "new-password"
+    = f.password_field :password, autocomplete: "new-password", class: 'loginform'
   -# .field
   -#   = f.label :password_confirmation
   -#   %br/
   -#   = f.password_field :password_confirmation, autocomplete: "new-password"
   .actions
-    = f.submit "Create Account"
-= render "devise/shared/links"
+    = f.submit "CREATE ACCOUNT"
+    = render "devise/shared/links"
