--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,20 +11,21 @@
 
   %body
     %header.header
-      .header_right_btn
-        = link_to new_article_path do
-          .float_btn_post
-            = image_tag 'camera.png'
-        = link_to root_path do
-          .float_btn_home
-            = image_tag 'home.jpeg', width:30
-        = link_to profile_path do
-          = image_tag 'profile.png', width:30
-        = link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' }
-      .header_left_btn
-        - if !current_page?(root_path)
-          = link_to :back do
-            = image_tag 'back.svg'
+      - if user_signed_in?
+        .header_right_btn
+          = link_to new_article_path do
+            .float_btn_post
+              = image_tag 'camera.png'
+          = link_to root_path do
+            .float_btn_home
+              = image_tag 'home.jpeg', width:30
+          = link_to profile_path do
+            = image_tag 'profile.png', width:30
+          = link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' }
+        .header_left_btn
+          - if !current_page?(root_path)
+            = link_to :back do
+              = image_tag 'back.svg'
     - if flash.present?
       .flash 
         - flash.each do |key, value|
