--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -1,31 +1,37 @@
-
 .card {
-   cursor: pointer;
-   background-color: white;
-   position: relative;
+    cursor: pointer;
+    background-color: white;
+    position: relative;
 
-   &_detail {
-     height: 100px;
-     overflow: hidden;
-       img {
+    &_detail {
+        height: 100px;
+        overflow: hidden;
+            img {
            position: absolute;
            width:40px;
            height: 40px;
            top: 20px;
            left: 60px;
            
-       }
-   }
+        }
+    }
 
-   &_image {
-       height: 180px;
-       display: flex;
-       overflow: hidden;
+    &_many {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 7px;
+        margin-top: 42px;
+        
+    }
 
-       img {
-           width: 70%;
-           top: 50px;
-           left: 50px;
-       }
-   }
+    &_image {
+        margin-right: 5px;
+        img {
+            height: 180px;
+            width: 170px;
+            top: 50px;
+            left: 50px;
+            border-radius: 20px;
+        }
+    }
 }
