--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -1,18 +1,40 @@
 .card {
     cursor: pointer;
     background-color: white;
-    position: relative;
 
-    &_detail {
-        height: 100px;
-        overflow: hidden;
-            img {
-           position: absolute;
+    &_user_info {
+        display: flex;
+        margin-bottom: 14px;
+    }
+
+    &_avatar {
+        img {
            width:40px;
            height: 40px;
-           top: 20px;
-           left: 60px;
-           
+           border-radius: 100%;
+        }
+    }
+
+    &_detail {
+        margin-left: 8px;
+
+        p {
+            font-family: Poppins Medium;
+            font-size: 14px;
+            line-height: 16px;
+            color: #333333;
+
+            margin: 0;
+        }
+
+        span {
+            font-family: Poppins;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 18px;
+
+            color: #9E9E9E;
         }
     }
 
@@ -33,5 +55,30 @@
             left: 50px;
             border-radius: 20px;
         }
+    }
+
+    &_reaction {
+        display: flex;
+        margin-top: 7px;
+        margin-left: 5px;
+
+        img {
+            margin-right: 14px;
+        }
+    }
+
+    &_content {
+        margin-top: 5px;
+        margin-bottom: 36px;
+        p {
+            margin: 0;
+            font-family: Poppins Medium;
+            font-size: 12px;
+            line-height: 14px;
+
+            color: #333333;
+
+        }
+        
     }
 }
