--- a/app/views/commons/_articles.html.haml
+++ b/app/views/commons/_articles.html.haml
@@ -1,15 +1,16 @@
 .container
   - articles.each do |article|
     .card
-      .card_detail
-        = link_to account_path(article.user) do
-          - if article.user.profile&.avatar
-            = image_tag article.user.profile.avatar
-          - else
-            = image_tag 'default.png'
-        %div
+      .card_user_info
+        .card_avatar
+          = link_to account_path(article.user) do
+            - if article.user.profile&.avatar
+              = image_tag article.user.profile.avatar
+            - else
+              = image_tag 'default.png'
+        .card_detail
           %p= article.user.display_name
-          %p= time_ago_in_words(article.created_at) + '前'
+          %span= time_ago_in_words(article.created_at) + '前'
       .card_image
         = link_to article_path(article) do
           - if article.images.attached?
@@ -17,19 +18,20 @@
               = image_tag image
           - else
             = image_tag 'eyecatch1.png'
+      .card_reaction
+        .card_heart
+          - if user_signed_in?
+            - if current_user.has_liked(article)
+              .article_heart
+                = image_tag 'like.png'
+            - else
+              .article_heart
+                = image_tag 'unlike.png'
+        .card_comment
+          = link_to new_article_comment_path(article) do
+            = image_tag 'comment.png'
       .card_content
-        %p= article.content
-      .card_heart
-        - if user_signed_in?
-          - if current_user.has_liked(article)
-            .article_heart
-              = image_tag 'like.png'
-          - else
-            .article_heart
-              = image_tag 'unlike.png'
-      .card_comment
-        = link_to new_article_comment_path(article) do
-          = image_tag 'comment.png'          
+        %p= article.content               
       .card_actions
       - if user_signed_in? && current_user.has_written(article)
         .article.detail_actions.dropdown
