ドロップダウンメニュー

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,7 @@ color: $text-base-color;
     width: 100%;
     position: relative;
     z-index: 1;
+    padding-bottom: 30px;
   }
 
   .float_btn {
