--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,7 @@ color: $text-base-color;
 .container {
     margin-top: 35px;
     width: 100%;
+    height: 90%;
     position: relative;
     z-index: 1;
     padding-bottom: 30px;
