--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -76,6 +76,7 @@
             font-family: Poppins Medium;
             font-size: 12px;
             line-height: 14px;
+            padding-bottom: 20px;
 
             color: #333333;
         }
