--- a/app/views/comments/new.html.haml
+++ b/app/views/comments/new.html.haml
@@ -1,10 +1,1 @@
-.container
-  %ul
-    - @comment.errors.full_messages.each do |message|
-      %li= message
-  = form_with(model: @comment, url: article_comments_path(@comment.article), local: true) do |f|
-    %div
-      = f.label :content, '内容'
-    %div
-      = f.text_area :content
-    = f.submit 'コメント追加'
+aaaaaa
