--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,4 +72,16 @@ color: $text-base-color;
     display: none;
 }
 
-    
+.header_btn_timeline {
+    height: 20px;
+    width: 25px;
+    border: 1px solid #e0e0e0;
+    background-color: #a09999;
+    border-radius: 5px;
+    text-align: center;
+    a {
+        font-size: 15px;
+        color: #fff;
+        font-weight: bold;
+    }
+}
